# wkgeom

./: .clang-format  CMakeLists.txt  clean_build.sh
test/: CMakeLists.txt  test_wkgeom.cpp
wkgeom/: CMakeLists.txt  wkgeom.cpp  wkgeom.h  wkgeom_utils.h
